opam-version: "2.0"
name: "satysfi-grcnum"
version: "0.2"
synopsis: "SATySFi Package for Greek Numeral System"
description: """
A SATySFi Package for Greek Numeral System.

this requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "MIT"
homepage: "https://github.com/na4zagin3/satyrographos"
bug-reports: "https://github.com/na4zagin3/satyrographos/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-grcnum.git"
depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satysfi-fonts-theano" {>= "2.0+satysfi0.0.3+satyrograhos0.0.2"}
  "satyrographos" {>= "0.0.1" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "grcnum"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
remove: [
  ["satyrographos" "opam" "uninstall"
   "-name" "grcnum"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
